--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run dev",
-    "dev": "cross-env ELEVENTY_ENV=dev eleventy --serve",
-    "build": "cross-env ELEVENTY_ENV=prod eleventy",
-    "seed": "cross-env ELEVENTY_ENV=seed eleventy"
+    "dev": "eleventy --serve",
+    "build": "cross-env eleventy",
+    "seed": "cross-env eleventy"
   },
   "repository": {
     "type": "git",
@@ -28,12 +28,14 @@
     "postcss-comment": "^2.0.0",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
+    "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^5.0.2",
     "precss": "^4.0.0",
     "uglify-js": "^3.6.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "cross-env": "5.2.0"
+    "cross-env": "5.2.0",
+    "fast-glob": "^3.2.2"
   }
 }
