--- a/package.json
+++ b/package.json
@@ -15,25 +15,26 @@
     "url": "https://github.com/philhawksworth/eleventyone"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
-    "autoprefixer": "^9.6.0",
-    "axios": "^0.19.0",
-    "cssnano": "^4.1.10",
-    "dotenv": "^8.0.0",
+    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "cssnano": "^5.1.9",
+    "dotenv": "^16.0.1",
     "html-minifier": "^4.0.0",
-    "luxon": "^1.16.0",
-    "npm": "^6.14.5",
-    "postcss": "^7.0.17",
+    "luxon": "^2.4.0",
+    "npm": "^8.10.0",
+    "postcss": "^8.4.14",
     "postcss-color-mix": "^1.1.0",
     "postcss-comment": "^2.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-mixins": "^6.2.1",
-    "postcss-nesting": "^7.0.1",
-    "postcss-simple-vars": "^5.0.2",
+    "postcss-import": "^14.1.0",
+    "postcss-mixins": "^9.0.2",
+    "postcss-nesting": "^10.1.7",
+    "postcss-simple-vars": "^6.0.3",
+    "postcss-selector-parser": "^6.0.10",
     "precss": "^4.0.0",
-    "uglify-js": "^3.6.0",
-    "xml2js": "^0.4.19"
+    "uglify-js": "^3.15.5",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "cross-env": "5.2.0",
