--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cssnano": "^5.1.9",
     "dotenv": "^16.0.1",
     "html-minifier": "^4.0.0",
+    "lodash": "^4.17.21",
     "luxon": "^2.4.0",
     "npm": "^8.10.0",
     "postcss": "^8.4.14",
@@ -30,8 +31,8 @@
     "postcss-import": "^14.1.0",
     "postcss-mixins": "^9.0.2",
     "postcss-nesting": "^10.1.7",
-    "postcss-simple-vars": "^6.0.3",
     "postcss-selector-parser": "^6.0.10",
+    "postcss-simple-vars": "^6.0.3",
     "precss": "^4.0.0",
     "uglify-js": "^3.15.5",
     "xml2js": "^0.4.23"
